<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeedTester</string>
    <string name="net_speedtester">SpeedTester</string>
    <string name="setting">Network &amp; Bluetooth&gt;</string>
    <string name="StartTesting">Start</string>
    <string name="button_label_stop">Stop</string>
    <string name="button_label_retest">Retry</string>
    <string name="speed_unit_byte">Bps</string>
    <string name="speed_unit_kb">KBps</string>
    <string name="speed_unit_mb">MBps</string>
    <string name="error">Error</string>
    <string name="msg_network_exception">Network exception!</string>
    <string name="msg_network_unestablished">No network connection established! Please check network setting!</string>
    <string name="button_label_setup_network">Setup Network</string>
    <string name="button_label_cancel">Cancel</string>
    <!-- <string name="button_label_radio_block">Playback block</string> -->
    <!-- <string name="button_label_radio_masic">Has masic in video</string> -->
    <string name="ready_to_test">READY TO TEST!</string>
    <string name="label_problem_description">Problem description:</string>
    <string name="starting">Starting&#8230;</string>
    <string name="testing">Testing&#8230;</string>
    <string name="test_completion">Test Completion</string>
    <string name="button_label_OK">OK</string>
    <string name="exception_time_out">Connection time out</string>
    <string name="exception_unknown">Unknown Exception</string>
    <string name="test_stopped">Test Stopped!</string>
    <string name="label_details">Details\nDescription:</string>
    <string name="label_email">Email:</string>
    <string name="label_phonenum">Mobile:</string>
    <string name="label_ip">IP:</string>
    <string name="label_city">City:</string>
    <string name="label_ISP">ISP:</string>
    <string name="default_ip">0.0.0.0</string>
    <string name="unknown_area">Unknown area</string>
    <string name="unknown_isp">Unknown ISP</string>
    <string name="location_verify_title">Is the location info above right?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="button_submit">Submit</string>
    <string name="model">Model:</string>
    <string name="radiobutton_others">Others</string>
    <string name="radiobutton_block">Influent</string>
    <string name="radiobutton_unclear">Unclear</string>
    <string name="radiobutton_unable_play">Cannot play</string>
    <string name="you_should_test_speed_first">You should test speed first!</string>
    <string name="you_should_give_an_email_or_phone_number">You should give a phone number or email at least</string>
    <string name="submit_sucess">Submit Success!</string>
    <string name="numbers_of_total">Step @ (Total # steps)</string>
    <string name="your_avg_speed_is">Your average speed is</string>
    <string name="dialog_msg_canceling">Canceling&#8230;</string>
    <string name="you_can_use_voice_input">You can use voice input</string>
    <string name="quit">Quit</string>
    <string name="modem">64K Modem</string>
    <string name="t1">T1</string>
    <string name="your_bandwidth">Your bandwidth</string>
    <string name="between">&#160;is between #speed1# and #speed2# .</string>
    <string name="is">&#160;is&#160;</string>
    <string name="seems_failed">Your network seems to have a problem</string>
    <string name="back">Back</string>
    <string name="oobe_subtitle">SpeedTester can evaluate your network download speed and bandwidth</string>
    <string name="adsl_1m">1M</string>
    <string name="adsl_2m">2M</string>
    <string name="adsl_4m">4M</string>
    <string name="adsl_8m">8M</string>
    <string name="adsl_10m">10M</string>
    <string name="adsl_20m">20M</string>
    <string name="address">Addr:</string>
    <string name="you_should_give_an_phone_number">You should give an valid phone number</string>
    <string name="required">Required!</string>
    <string name="please_give_a_valid_address">Please give a valid address!</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="cs_phone">Support Phone Num:</string>
    <string name="cs_email">Support Email:</string>
    <string name="cs_weibo">Support WeChat:</string>
    <string name="cs_phone_string">400&#8211;059&#8211;0012</string>
    <string name="cs_email_string">kf@ismartv.cn</string>
    <string name="cs_weibo_string">视云影院</string>
    <item name="feedback_verify_yes" type="id">false</item>
    <item name="problem_other" type="id">false</item>
    <item name="edit_phonenum" type="id">false</item>
    <item name="edit_address" type="id">false</item>
    <item name="edit_email" type="id">false</item>
    <string name="connect_refused">connect refused!!!</string>
</resources>