<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="965dip"
                android:layout_height="903dip"
                android:layout_marginTop="80dip"
                android:id="@+id/feedback_area"
                android:background="@drawable/feedback_bg"
        >
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/model_sn_show_area"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_marginTop="15dip"
            android:layout_marginRight="40dip">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sn_show"
                android:textSize="30sp"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dip"
            android:layout_marginLeft="40dip"
            android:layout_marginBottom="40dip"
            android:id="@+id/label_feedback1"
            android:textSize="44sp"
            android:text="@string/label_problem_description"
            android:textColor="#FFFFFFFF"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/problem_options"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/label_feedback1"
            android:gravity="center"
            android:layout_margin="20dip"
            android:checkedButton="@id/problem_other"
            >
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/problem_block"
                android:textSize="35sp"
                android:text="@string/radiobutton_block"
                android:layout_marginRight="15dip"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/unable_play"
                android:textSize="35sp"
                android:text="@string/radiobutton_unable_play"
                android:layout_marginRight="15dip"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/problem_unclear"
                android:textSize="35sp"
                android:text="@string/radiobutton_unclear"
                android:layout_marginRight="15dip"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/problem_other"
                android:textSize="35sp"
                android:text="@string/radiobutton_others"
                android:layout_marginRight="15dip"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/problem_options"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dip"
            android:text="@string/label_details"
            android:textSize="35sp"
            android:id="@+id/details_description"
            />
    <EditText
            android:id="@+id/edit_details"
            android:layout_width="match_parent"
            android:layout_height="260dip"
            android:layout_below="@id/problem_options"
            android:layout_toRightOf="@id/details_description"
            android:layout_marginTop="10dip"
            android:layout_marginRight="70dip"
            android:layout_marginLeft="5dip"
            android:layout_marginBottom="10dip"
            android:textSize="35sp"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:background="@drawable/edit_drawable">
    </EditText>
    <LinearLayout
            android:id="@+id/user_info_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/edit_details"
            android:layout_alignParentRight="true"
            android:layout_margin="10dip">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textSize="35sp"
                android:text="@string/label_phonenum"/>
        <EditText
                android:id="@+id/edit_phonenum"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textSize="35sp"
                android:inputType="textPhonetic|phone"
                android:gravity="left"
                android:background="@drawable/edit_drawable"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_margin="5dip"
                android:text="@string/label_email"/>
        <EditText
                android:id="@+id/edit_email"
                android:layout_width="335dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:textSize="35sp"
                android:inputType="textEmailAddress"
                android:gravity="left"
                android:background="@drawable/edit_drawable"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/feedback_autogain_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_area"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="40dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="20dip"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/label_ip"
                android:textSize="35sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/feedback_ip"
                android:text="@string/default_ip"
                android:textSize="35sp"
                android:singleLine="true"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:layout_marginRight="20dip"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/label_city"
                android:textSize="35sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/feedback_city"
                android:text="@string/unknown_area"
                android:textSize="35sp"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:maxWidth="150sp"
                android:ellipsize="marquee"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:layout_marginRight="20dip"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/label_ISP"
                android:textSize="35sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/feedback_isp"
                android:text="@string/unknown_isp"
                android:textSize="35sp"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:maxWidth="150sp"
                android:ellipsize="marquee"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:layout_marginRight="20dip"/>
    </LinearLayout>
    <TextView
            android:id="@+id/feedback_verify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_autogain_area"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dip"
            android:textSize="35sp"
            android:text="@string/location_verify_title"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feedback_verify_options"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/feedback_autogain_area"
            android:layout_toRightOf="@id/feedback_verify_title"
            android:checkedButton="@id/feedback_verify_yes">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/feedback_verify_yes"
                android:textSize="35sp"
                android:text="@string/label_yes"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/feedback_verify_no"
                android:textSize="35sp"
                android:text="@string/label_no"/>
    </RadioGroup>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_verify_options"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="200dip"
            android:layout_marginTop="40dip"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:paddingLeft="35dip"
            android:paddingRight="35dip"
            android:id="@+id/button_submit"
            android:textSize="35sp"
            android:text="@string/button_submit"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_verify_options"
            android:layout_alignParentRight="true"
            android:layout_marginRight="200dip"
            android:layout_marginTop="40dip"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:paddingLeft="35dip"
            android:paddingRight="35dip"
            android:id="@+id/button_quit"
            android:textSize="35sp"
            android:text="@string/quit"/>
</RelativeLayout>